Fix spacing around elements

--- a/style.css
+++ b/style.css
@@ -1,32 +1,52 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+body {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 1em;
 }
 .nav {
   display: flex;
   justify-content: space-around;
 }
-.nav,
-.header-container {
+.info-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1.2em;
+}
+.nav-header {
   background-color: #1f2937;
+  display: flex;
+  flex-direction: column;
+  gap: 1.4em;
+  padding: 12px;
 }
 .right-links {
   display: flex;
-  gap: 5em;
+  gap: 2em;
 }
 .header-container {
   display: flex;
   justify-content: center;
+  gap: 4em;
 }
 .header-text {
-  width: 320px;
-  padding-bottom: 50px;
+  width: 400px;
+}
+.header-text p {
+  margin-bottom: 9px;
 }
 /* Color and font tweaks */
 a,
 .header-text > p {
   font-size: 18px;
-  color: #e5e7eb;
+  color: #a0a5af;
 }
 ul li {
   list-style-type: none;
@@ -38,13 +58,18 @@ li a {
   font-size: 24px;
   color: #f9faf8;
 }
+div > h1 {
+  font-size: 48px;
+  font-weight: bolder;
+  color: #f9faf8;
+}
 /*  */
 .nav {
   padding: 12px;
 }
 .header-image {
-  width: 300px;
-  height: 120px;
+  width: 360px;
+  height: 150px;
   flex-shrink: 0;
   background-color: #6c6565;
   font-size: 18px;
@@ -52,4 +77,89 @@ li a {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+button.sign-up {
+  padding: 7px 17px;
+  background-color: #365afa;
+  border-radius: 5px;
+  border: none;
+  color: azure;
+  font-weight: 600;
+}
+.info {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+.info-container h2 {
+  text-align: center;
+}
+.info-images p {
+  width: 130px;
+}
+.image {
+  width: 120px;
+  height: 110px;
+  border-radius: 10px;
+  border: 2px solid #365afa;
+}
+.quote-container {
+  background-color: #e5e7eb;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 30px;
+}
+.text {
+  min-width: 700px;
+  height: auto;
+}
+.text {
+  padding: 10px;
+  font-size: 36px;
+  font-weight: light;
+  font-style: italic;
+  color: #1f2937;
+  width: 850px;
+}
+.cite {
+  align-self: center;
+  font-size: 20px;
+  font-weight: 700;
+  margin-right: -700px;
+}
+div.signup-container {
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.signing-container {
+  padding: 19px 55px;
+  display: flex;
+  align-items: center;
+  gap: 3em;
+  background-color: #365afa;
+  border-radius: 5px;
+}
+.sign-below button {
+  background-color: #365afa;
+  color: #fbfcff;
+  border: 2px solid #e5e7eb;
+  border-radius: 7px;
+  padding: 5px 20px;
+}
+.sign-text h3,
+.sign-text p {
+  color: #e5e7eb;
+}
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 17px;
+  background-color: #1f2937;
+  color: #a0a5af;
 }
